Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82424

qset.h, qvector.h, and qlist.h use Q_DECL_DEPRECATED_X instead of QT_DEPRECATED_X

XMLWordPrintable

    • e59e5643b57e94e909b0dcd7111362b75d64fa94 (qt/qtbase/5.14)

      qset.h, qvector.h, and qlist.h use Q_DECL_DEPRECATED_X instead of QT_DEPRECATED_X so the deprecations cannot be disabled. This is a huge inconvenience for building older branches in a Qt-based project.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            laknoll Lars Knoll
            ts Thomas Sondergaard
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes