Use QT_DEPRECATED_X instead of Q_DECL_DEPRECATED_X

Allow deprecation warnings to be controlled with
QT_NO_DEPRECATED_WARNINGS.

Fixes: QTBUG-82424
Change-Id: I6df55ee2abaf4c141ac9b0e7661e46ba3706b20e
Reviewed-by: Lars Knoll <lars.knoll@qt.io>